--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -274,6 +274,26 @@
   "signInWithGoogle": "Sign-in with Google",
   "health": "Health",
   "availableBuffs": "Available Buffs",
+  "buffs": {
+    "items": {
+      "repair_50": {
+        "name": "Repair 50",
+        "description": "Repair 50 HP of a doghouse."
+      },
+      "repair_max": {
+        "name": "Full repair",
+        "description": "Fully restore a doghouse's HP."
+      },
+      "energy_10_boost": {
+        "name": "Energy 10 boost",
+        "description": "Instantly gain 10 energy."
+      },
+      "energy_50_boost": {
+        "name": "Energy 50 boost",
+        "description": "Instantly gain 50 energy."
+      }
+    }
+  },
   "confirm": "Confirm",
   "cancel": "Cancel",
   "tapTimesToAttack": "Tap {n} times to attack!",
